<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/starship_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_starship_detail">

        <TextView
            android:id="@+id/starship_detail_name_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/starship_detail_name"
            style="@style/TextDetail.End"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_starship_detail_label"
            android:layout_marginLeft="@dimen/margin_starship_detail_label"
            app:layout_constraintBaseline_toBaselineOf="@id/starship_detail_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/starship_detail_name_label"
            tools:text="EF76 Nebulon-B escort frigate" />

        <TextView
            android:id="@+id/starship_detail_model_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detail_model"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starship_detail_name_label" />

        <TextView
            android:id="@+id/starship_detail_model"
            style="@style/TextDetail.End"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_starship_detail_label"
            android:layout_marginLeft="@dimen/margin_starship_detail_label"
            app:layout_constraintBaseline_toBaselineOf="@id/starship_detail_model_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/starship_detail_model_label"
            tools:text="EF76 Nebulon-B escort frigate" />

        <TextView
            android:id="@+id/starship_detail_class_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detail_class"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starship_detail_model_label" />

        <TextView
            android:id="@+id/starship_detail_class"
            style="@style/TextDetail.End"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_starship_detail_label"
            android:layout_marginLeft="@dimen/margin_starship_detail_label"
            app:layout_constraintBaseline_toBaselineOf="@id/starship_detail_class_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/starship_detail_class_label"
            tools:text="Escort ship" />

        <TextView
            android:id="@+id/starship_detail_manufacturer_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detail_manufacturer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starship_detail_class_label" />

        <TextView
            android:id="@+id/starship_detail_manufacturer"
            style="@style/TextDetail.End"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_starship_detail_label"
            android:layout_marginLeft="@dimen/margin_starship_detail_label"
            app:layout_constraintBaseline_toBaselineOf="@id/starship_detail_manufacturer_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/starship_detail_manufacturer_label"
            tools:text="Kuat Drive Yards" />

        <TextView
            android:id="@+id/starship_detail_speed_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detail_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starship_detail_manufacturer_label" />

        <TextView
            android:id="@+id/starship_detail_speed"
            style="@style/TextDetail.End"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_starship_detail_label"
            android:layout_marginLeft="@dimen/margin_starship_detail_label"
            app:layout_constraintBaseline_toBaselineOf="@id/starship_detail_speed_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/starship_detail_speed_label"
            tools:text="40" />

        <TextView
            android:id="@+id/starship_detail_length_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detail_length"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starship_detail_speed_label" />

        <TextView
            android:id="@+id/starship_detail_length"
            style="@style/TextDetail.End"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_starship_detail_label"
            android:layout_marginLeft="@dimen/margin_starship_detail_label"
            app:layout_constraintBaseline_toBaselineOf="@id/starship_detail_length_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/starship_detail_length_label"
            tools:text="300" />

        <TextView
            android:id="@+id/starship_detail_crew_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detail_crew"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starship_detail_length_label" />

        <TextView
            android:id="@+id/starship_detail_crew"
            style="@style/TextDetail.End"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_starship_detail_label"
            android:layout_marginLeft="@dimen/margin_starship_detail_label"
            app:layout_constraintBaseline_toBaselineOf="@id/starship_detail_crew_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/starship_detail_crew_label"
            tools:text="854" />

        <TextView
            android:id="@+id/starship_detail_passengers_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detail_passengers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starship_detail_crew_label" />

        <TextView
            android:id="@+id/starship_detail_passengers"
            style="@style/TextDetail.End"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_starship_detail_label"
            android:layout_marginLeft="@dimen/margin_starship_detail_label"
            app:layout_constraintBaseline_toBaselineOf="@id/starship_detail_passengers_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/starship_detail_passengers_label"
            tools:text="75" />

        <TextView
            android:id="@+id/starship_detail_capacity_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detail_cargo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starship_detail_passengers_label" />

        <TextView
            android:id="@+id/starship_detail_capacity"
            style="@style/TextDetail.End"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_starship_detail_label"
            android:layout_marginLeft="@dimen/margin_starship_detail_label"
            app:layout_constraintBaseline_toBaselineOf="@id/starship_detail_capacity_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/starship_detail_capacity_label"
            tools:text="6000000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>